tests/blob/null_fields_faulty.sy
A :: blob {}

B :: blob {
    a: int?,
}

start :: fn do
    a : !B = A {}
    print(a.a)
end
// error: #UnknownField(_, _)
